rename home to index for github pages

--- a/Home.html
+++ b/Home.html
@@ -70,7 +70,7 @@
         <nav class="sidenav">
             <ul>
                 <li>
-                    <a href="Home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="Polution.html">Polution</a>
