--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Life</title>
+    <title>Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -62,7 +62,7 @@
 </head>
 
 <head class="title" style="text-align: center;">
-    <h1>Life</h1>
+    <h1>Home</h1>
 </head>
 
 <body style="background-color: #ddd;">
@@ -70,7 +70,7 @@
         <nav class="sidenav">
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="Home.html">Home</a>
                 </li>
                 <li>
                     <a href="Polution.html">Polution</a>
