--- a/Production.html
+++ b/Production.html
@@ -79,14 +79,15 @@
                     <a href="Life.html">Life</a>
                 </li>
                 <li>
-                    <a href="Production.html">Prodiction</a>
+                    <a href="Production.html">Production</a>
                 </li>
             </ul>
         </nav>
 
         <article>
             <div class="content">
-                <h1>This is a Test </h1>
+                <h1 style="text-align: center;">Production Results From The Industrial Revolution</h1>
+                <img src="car production.jpg" style="width: 1080px; ">
                 <p>Hello World</p>
             </div>
         </article>
