--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
             box-sizing: border-box;
         }
         
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+        
         body {
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
